--- a/alianzas.html
+++ b/alianzas.html
@@ -58,25 +58,26 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="turismo.html">Guía turística</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="acerca.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="politica.html">Política de Calidad</a>
+                  </li>
+                  <li class="nav-item active">
                     <a class="nav-link" href="#">Alianzas Estratégicas</a>
                   </li>
                 </ul>
               </div>
             </nav>
-
-            
           </div>
         </header>
         <!-- texto main -->
-      </section>
-      <video src="video/casa wenka.mp4" height="400px" width="100%" controls muted autoplay></video>
+  </section>
+  <video src="video/casa wenka.mp4" height="400px" width="100%" controls muted autoplay></video>
 
 
   <section>
