--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="turismo.html">Guía turística</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="acerca.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="politica.html">Política de Calidad</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
@@ -384,21 +387,21 @@
 
 
     <div id="footer" class="row">
-        <div class="col-12 text-center">
-            <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
-        </div>
-        <div class="col-6 d-flex align-items-center justify-content-end">
-            <p class="d-inline">
-                <em>NIT: 830.500.789-9</em>
-            </p>
-        </div>
-        <div class="col-6 d-flex align-items-center justify-content-start">
-            <span style="font-size: 2em;">
-                <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
-            </span>
-        </div>
+      <div class="col-12 text-center">
+        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-end">
+        <p class="d-inline">
+          <em>NIT: 830.500.789-9</em>
+        </p>
+      </div>
+      <div class="col-6 d-flex align-items-center justify-content-start">
+        <span style="font-size: 2em;">
+          <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        </span>
+      </div>
     </div>
   </section>
 
