--- a/turismo.html
+++ b/turismo.html
@@ -10,6 +10,7 @@
 
     <title>COOMUSTRANSTUR</title>
 
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -28,85 +29,162 @@
 <body>
     <!-- INDEX -->
     <section class="container-fluid pl-0 pr-0">
-        <div class="">
+        <header class="">
             <div class="">
-                <header class="">
-                    <div class="">
-                        <!-- menu -->
-                        <nav class="row navbar navbar-expand-sm bg-white">
-                            <div class="col">
-                                <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                                <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
-                            </div>
-                            <div class="col d-none d-md-inline-block">
-                                <ul class="navbar-nav mt-2 float-right">
-                                    <li class="nav-item">
-                                        <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
-                        <nav class="row navbar navbar-expand-lg bg-nav-menu">
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                                ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon">
-                                    <i class="fas fa-bars"></i>
-                                </span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="acerca.html">Nosotros</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="politica.html">Política de Calidad</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </nav>
+                <!-- menu -->
+                <nav class="row navbar navbar-expand-sm bg-white">
+                    <div class="col">
+                        <a class="navbar-brand ml-3 text-green d-none d-sm-block" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                        <a class="navbar-brand ml-3 text-green d-block d-sm-none" href="index.html"><span class="title2 font-weight-bold">Coomutranstur</span><br></a>
                     </div>
-                </header>
-                <!-- texto main -->
+                    <div class="col d-none d-md-inline-block">
+                        <ul class="navbar-nav mt-2 float-right">
+                            <li class="nav-item">
+                                <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+                <nav class="row navbar navbar-expand-lg bg-nav-menu">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                        ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon">
+                            <i class="fas fa-bars"></i>
+                        </span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Guía turística</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="acerca.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="politica.html">Política de Calidad</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <!-- texto main -->
     </section>
 
-    <section id="inicio">
-        <div class="container-fluid pl-0 pr-0">
-            <div id="img_intro_turismo" class="d-flex justify-content-center align-items-center">
-                <h2>Guía Turística</h2>
+    <section id="img_intro_turismo">
+        <main id="main_turismo" class="pt-4 d-flex justify-content-center align-items-center">
+            <h1>Guía Turística</h1>
+        </main>
+    </section>
+
+    <main id="contenido_turismo" class="mt-5 mb-5">
+        <div class="container">
+
+            <div class="row d-flex align-items-center">
+
+                <div class="col">
+                    <h3>Córdoba</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos sunt deserunt unde ipsa
+                        quibusdam oris</p>
+                </div>
+                <div class="col mb-4">
+                    <img class="img-fluid" data-src="holder.js/500x300?auto=yes">
+                </div>
+
+                <div class="w-100"></div>
+
+                <div class="col  mb-4">
+                    <img class="img-fluid" data-src="holder.js/500x300?auto=yes">
+                </div>
+                <div class="col ">
+                    <h3>San Cipriano</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos sunt deserunt unde ipsa
+                        quibusdam oris</p>
+                </div>
+
+                <div class="w-100"></div>
+
+                <div class="col">
+                    <h3>Casa Wenka</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos sunt deserunt unde ipsa
+                        quibusdam oris</p>
+                </div>
+                <div class="col mb-4">
+                    <img class="img-fluid" data-src="holder.js/500x300?auto=yes">
+                </div>
+
+                <div class="w-100"></div>
             </div>
         </div>
+
+    </main>
+
+    <section class="mt-4 mb-4">
+        <div class="container-fluid pl-0 pr-0">
+            <div class="row d-flex justify-content-around">
+                <img src="img/bg1.jpg" alt="" class="img_adaptada">
+                <img src="img/bg2.jpg" alt="" class="img_adaptada">
+                <img src="img/bg3.jpg" alt="" class="img_adaptada">
+                <img src="img/bg4.jpg" alt="" class="img_adaptada">
+                <img src="img/bg1.jpg" alt="" class="img_adaptada">
+                <img src="img/bg2.jpg" alt="" class="img_adaptada">
+                <img src="img/bg3.jpg" alt="" class="img_adaptada">
+                <img src="img/bg4.jpg" alt="" class="img_adaptada">
+
+            </div>
+        </div>
+        <div id="fondo_turismo_img"></div>
     </section>
 
+    <!-- Footer  -->
+    <div id="footer" class="row">
+        <div class="col-12 text-center">
+            <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+        </div>
+        <div class="col-6 d-flex align-items-center justify-content-end">
+            <p class="d-inline">
+                <em>NIT: 830.500.789-9</em>
+            </p>
+        </div>
+        <div class="col-6 d-flex align-items-center justify-content-start">
+            <span style="font-size: 2em;">
+                <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            </span>
+        </div>
+    </div>
 
-    <main>
+    <!-- <main>
 
         <div>
             <img class="lazy" data-src="https://picsum.photos/700" alt="">
             <img class="lazy" data-src="https://picsum.photos/600" alt="">
         </div>
 
-    </main>
+    </main> -->
 
 
 
     <script src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.lazy.min.js"></script>
+    <script src="js/jquery.lazy.min.js"></script>
+
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/carga.js"></script>
+    <script src="js/holder.js"></script>
 
     <script>
 
     </script>
-
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/carga.js"></script>
 </body>
 
 </html>
