--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="row text-center justify-content-around">
 
           <div class="col-12 mb-3 text-center title font-weight-bold">
-            <p class="text-uppercase">Rincón de Biodiversidad en la zona</p>
+            <p class="text-uppercase">Rincón de Biodiversidad en el Pacífico Colombiano</p>
           </div>
 
           <div class="ism-slider" data-transition_type="zoom" data-interval="3000" data-radio_type="thumbnail" id="my-slider">
