--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             </div>
             <div class="col-sm-12 col-md-6 col-xl-6 text-center">
-              <h3 class="text-white text-center">Empresa líder en el turismo a</h3>
+              <h3 class="text-white text-center">Empresa líder en ecoturismo a</h3>
               <span class="title sancipriano text-white text-center d-none d-xl-block">sancipriano</span>
               <h1><span class="sancipriano text-white text-center d-block d-xl-none">sancipriano</span></h1>
               <a name="" id="" class="btn btn-lg mt-5 text-center btn-contacto" href="#footer" role="button">Contáctanos</a>
