--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100 img-fluid" src="img/Sin título-2.svg" alt="First slide">
+                <img class="d-block w-100 pb-3 img-fluid" data-src="holder.js/500x300?auto=yes">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 1</h5>
                   <p>El evento numero 1 en...</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 img-fluid" src="img/Sin título-1.svg" alt="Second slide">
+                <img class="d-block w-100 pb-3 img-fluid" data-src="holder.js/500x300?auto=yes">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 2</h5>
                   <p>El evento numero 2 en...</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 img-fluid" src="img/Sin título-3.svg" alt="Third slide">
+                <img class="d-block w-100 pb-3 img-fluid" data-src="holder.js/500x300?auto=yes">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Noticia 3</h5>
                   <p>El evento numero 3 en...</p>
@@ -184,7 +184,7 @@
     <section id="biodiversidad">
       <div class="container-fluid p-0">
         <div class="d-flex justify-content-center">
-          <img class="cabecita2 d-none d-sm-block" src="img/biodiversidad.png" alt="">
+          <img class="cabecita2 d-none d-sm-block" src="img/index/biodiversidad.png" alt="">
         </div>
         <div class="row text-center justify-content-around">
 
@@ -192,26 +192,27 @@
             <p class="text-uppercase">Rincón de Biodiversidad en el Pacífico Colombiano</p>
           </div>
 
-          <div class="ism-slider" data-transition_type="zoom" data-interval="3000" data-radio_type="thumbnail" id="my-slider">
-            <ol>
-              <li>
-                <img src="img/bg1.jpg">
-                <div class="ism-caption ism-caption-0">San Cripriano</div>
-              </li>
-              <li>
-                <img src="img/bg3.jpg">
-                <div class="ism-caption ism-caption-0">Córdoba</div>
-              </li>
-              <li>
-                <img src="img/bg4.jpg">
-                <div class="ism-caption ism-caption-0">B/Tura</div>
-              </li>
-            </ol>
+          <div class='container'>
+
+            <div class="ism-slider" data-transition_type="zoom" data-interval="3000" id="my-slider">
+              <ol>
+                <li>
+                  <img src="img/index/biodiversidad/img1.jpg">
+                  <div class="ism-caption ism-caption-0">My slide caption text</div>
+                </li>
+                <li>
+                  <img src="img/index/biodiversidad/img2.jpg">
+                  <div class="ism-caption ism-caption-0">My slide caption text</div>
+                </li>
+                <li>
+                  <img src="img/index/biodiversidad/img3.jpg">
+                  <div class="ism-caption ism-caption-0">My slide caption text</div>
+                </li>
+              </ol>
+            </div>
           </div>
           <p class="d-none ism-badge" id="my-slider-ism-badge"><a class="ism-link" href="http://imageslidermaker.com"
               rel="nofollow">generated with ISM</a></p>
-
-
         </div>
       </div>
     </section>
@@ -219,7 +220,7 @@
     <section id="gastronomia">
       <div id="parallax1"></div>
       <div class="d-flex justify-content-center justify-content-center">
-        <img class="cabecita2 d-none d-sm-block" src="img/gastronomia.png" alt="">
+        <img class="cabecita2 d-none d-sm-block" src="img/index/gastronomia.png" alt="">
       </div>
       <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
 
@@ -250,7 +251,7 @@
     <section id="cultura" class="">
       <div id="parallax2"></div>
       <div class="d-flex justify-content-center justify-content-center">
-        <img class="cabecita2 d-none d-sm-block" src="img/cultura.png" alt="">
+        <img class="cabecita2 d-none d-sm-block" src="img/index/cultura.png" alt="">
       </div>
       <div class="container-fluid contenido-parallax d-flex align-items-center p-0">
 
