--- a/alianzas.html
+++ b/alianzas.html
@@ -90,7 +90,7 @@
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+                  class="cabecita img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -123,7 +123,7 @@
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                  class="cabecita img-fluid" src="holder.js/100x70"></a>
+                  class="cabecita img-fluid lazy" src="holder.js/100x70"></a>
             </div>
             <div class="w-100"></div>
             <div class="col text-center">
@@ -756,10 +756,10 @@
             <div class="row">
               <div class="col text-center">
                 <section data-featherlight-gallery data-featherlight-filter="a">
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"></a>
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"></a>
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"></a>
-                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"><img class="img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113552.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113655.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_113720.jpg"></a>
+                  <a href="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"><img class="img-fluid lazy" src="img/restaurante y hotel el buen gusto/IMG_20180916_114339.jpg"></a>
                 </section>
               </div>
             </div>
@@ -814,6 +814,12 @@
       galleryFadeIn: 300,
 
       openSpeed: 300
+    });
+
+    $(function() {
+        $('.lazy').lazy({
+            placeholder: "img/load.gif"
+        });
     });
   </script>
 
