--- a/alianzas.html
+++ b/alianzas.html
@@ -799,6 +799,7 @@
   <!-- SCRIPTS -->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.lazy.min.js"></script>
   <script src="js/holder.js"></script>
 
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
