--- a/alianzas.html
+++ b/alianzas.html
@@ -800,6 +800,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.lazy.min.js"></script>
+  <script src="js/carga.js"></script>
   <script src="js/holder.js"></script>
 
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
@@ -815,12 +816,6 @@
       galleryFadeIn: 300,
 
       openSpeed: 300
-    });
-
-    $(function() {
-        $('.lazy').lazy({
-            placeholder: "img/load.gif"
-        });
     });
   </script>
 
