--- a/acerca.html
+++ b/acerca.html
@@ -278,11 +278,13 @@
         </div>
     </div>
 
+    <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
 
     <!-- Scripts -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/aos.js"></script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="js/app.js"></script>
 
     <script>
