--- a/alianzas.html
+++ b/alianzas.html
@@ -795,6 +795,7 @@
     </div>
   </section>
 
+  <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
 
   <!-- SCRIPTS -->
   <script src="js/jquery.min.js"></script>
@@ -802,6 +803,10 @@
   <script src="js/jquery.lazy.min.js"></script>
   <script src="js/carga.js"></script>
   <script src="js/holder.js"></script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="js/app.js"></script>
+
+
 
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
     charset="utf-8"></script>
