--- a/turismo.html
+++ b/turismo.html
@@ -128,14 +128,14 @@
     <section class="mt-4 mb-4">
         <div class="container-fluid pl-0 pr-0">
             <div class="row d-flex justify-content-around">
-                <img src="img/bg1.jpg" alt="" class="img_adaptada">
-                <img src="img/bg2.jpg" alt="" class="img_adaptada">
-                <img src="img/bg3.jpg" alt="" class="img_adaptada">
-                <img src="img/bg4.jpg" alt="" class="img_adaptada">
-                <img src="img/bg1.jpg" alt="" class="img_adaptada">
-                <img src="img/bg2.jpg" alt="" class="img_adaptada">
-                <img src="img/bg3.jpg" alt="" class="img_adaptada">
-                <img src="img/bg4.jpg" alt="" class="img_adaptada">
+                <img src="img/bg1.jpg" alt="" class="img_adaptada lazy">
+                <img src="img/bg2.jpg" alt="" class="img_adaptada lazy">
+                <img src="img/bg3.jpg" alt="" class="img_adaptada lazy">
+                <img src="img/bg4.jpg" alt="" class="img_adaptada lazy">
+                <img src="img/bg1.jpg" alt="" class="img_adaptada lazy">
+                <img src="img/bg2.jpg" alt="" class="img_adaptada lazy">
+                <img src="img/bg3.jpg" alt="" class="img_adaptada lazy">
+                <img src="img/bg4.jpg" alt="" class="img_adaptada lazy">
 
             </div>
         </div>
@@ -161,27 +161,17 @@
         </div>
     </div>
 
-    <!-- <main>
-
-        <div>
-            <img class="lazy" data-src="https://picsum.photos/700" alt="">
-            <img class="lazy" data-src="https://picsum.photos/600" alt="">
-        </div>
-
-    </main> -->
-
+    <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
 
 
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.lazy.min.js"></script>
-
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/carga.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/holder.js"></script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="js/app.js"></script>
 
-    <script>
-
-    </script>
 </body>
 
 </html>
