--- a/turismo.html
+++ b/turismo.html
@@ -168,6 +168,7 @@
     <!-- <script src="js/carga.js"></script> -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/holder.js"></script>
+    <script src="js/in-view.min.js"></script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="js/app.js"></script>
 
@@ -178,7 +179,6 @@
                 threshold: 0,
                 visibleOnly: true
             });
-        }
         });
     </script>
 
