--- a/turismo.html
+++ b/turismo.html
@@ -127,15 +127,14 @@
 
     <section class="mt-4 mb-4">
         <div class="container-fluid pl-0 pr-0">
-            <div id="elemento1" class="row d-flex justify-content-around">
-                <img src="img/bg1.jpg" alt="" class="img_adaptada lazy">
-                <img src="img/bg2.jpg" alt="" class="img_adaptada lazy">
-                <img src="img/bg3.jpg" alt="" class="img_adaptada lazy">
-                <img src="img/bg4.jpg" alt="" class="img_adaptada lazy">
-                <img src="img/bg1.jpg" alt="" class="img_adaptada lazy">
-                <img src="img/bg2.jpg" alt="" class="img_adaptada lazy">
-                <img src="img/bg3.jpg" alt="" class="img_adaptada lazy">
-                <img src="img/bg4.jpg" alt="" class="img_adaptada lazy">
+            <div id="elemento1" class="row d-flex justify-content-center">
+
+                <img src="https://picsum.photos/300" alt="" srcset="" class="img_adaptada lazy">
+                <img src="https://picsum.photos/400" alt="" srcset="" class="img_adaptada lazy">
+                <img src="https://picsum.photos/500" alt="" srcset="" class="img_adaptada lazy">
+                <img src="https://picsum.photos/600" alt="" srcset="" class="img_adaptada lazy">
+                <img src="https://picsum.photos/700" alt="" srcset="" class="img_adaptada lazy">
+                <img src="https://picsum.photos/800" alt="" srcset="" class="img_adaptada lazy">
 
             </div>
         </div>
